--- a/src/assets/6-pages/Dashboard.module.scss
+++ b/src/assets/6-pages/Dashboard.module.scss
@@ -8,10 +8,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     z-index: 2;
-    width: min(50rem, 90%);
+    // width: min(50rem, 90%);
 
+    > div:nth-child(1) {
+        align-content: flex-start;
+    }
 }
 
 
@@ -54,7 +56,7 @@
     align-items: center;
     width: 5rem;
     height: 5rem;
-    margin-top: 5rem;
+    margin-top: 3rem;
     transition: 0.3s;
     border: 1px solid transparent;
     &:hover {
@@ -110,7 +112,7 @@
     
     border-radius: 5px;
     @include fontSubTitle1();
-    margin-top: 5rem;
+    margin-top: 3rem;
     cursor: pointer;
     transition: 0.3s;
     min-width: 25rem;
